--- a/src/app/home/autor/autor.component.html
+++ b/src/app/home/autor/autor.component.html
@@ -7,7 +7,13 @@
         </ion-card-header>
       </span>
     </ion-card>
+      <br>
+      <a href="home"> 
+      <img id="imagen2" src="assets/iconos/v2/atras.png">
+      <br><br><br><br>
+    </a>
 </ion-content>
+
           
         
         
