--- a/src/app/home/biografia/biografia.component.html
+++ b/src/app/home/biografia/biografia.component.html
@@ -6,4 +6,9 @@
     <p>
       {{biografia.author.biography}}
     </p>
+    <a href="autores">
+      <center><img id="imagen2" src="assets/iconos/v2/atras.png"></center>
+      <br><br><br><br>
+  </a>
+
 </ion-content>
