--- a/src/app/home/biografia/biografia.component.scss
+++ b/src/app/home/biografia/biografia.component.scss
@@ -23,10 +23,15 @@ img {
     width: 200px;
     height: 250px;
     margin-top: 3%;
+    
 }   
 
 ion-content{
     top: 6%;
     margin-top: 6%;
 }
-
+#imagen2
+{
+    width: 100px;
+    height: 100px;
+}
