--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -7,4 +7,8 @@
                 </ion-card-header>
             </span>
         </ion-card>
+        <a href="autorLista">
+              <img id="imagen2" src="assets/iconos/v2/atras.png">
+              <br><br><br>
+          </a>
 </ion-content>
