--- a/src/app/home/lista-autor/lista-autor.component.html
+++ b/src/app/home/lista-autor/lista-autor.component.html
@@ -6,5 +6,9 @@
           <ion-card-title>{{author.nameAuthor}}</ion-card-title>
         </ion-card-header>
       </span>
-    </ion-card>
+    </ion-card> <br>
+    <a href="home">
+      <img id="imagen2" src="assets/iconos/v2/atras.png">
+      <br><br><br><br><br><br>
+  </a>
 </ion-content>
