--- a/src/app/home/orientacion/orientacion.component.html
+++ b/src/app/home/orientacion/orientacion.component.html
@@ -8,7 +8,7 @@
     formales y otros aspectos de carácter técnico.
 </p>
 
-<a href="home" text-align="center">
-    <h3>Volver</h3>
+<a href="home">
+    <center><img id="imagen2" src="assets/iconos/v2/atras.png"></center>
 </a>
 </ion-content>
