--- a/src/app/home/capitulos/capitulos.component.html
+++ b/src/app/home/capitulos/capitulos.component.html
@@ -7,4 +7,7 @@
             </ion-card-header>
         </span>
     </ion-card>
+    <a href="libros">
+        <img id="imagen2" src="assets/iconos/v2/atras.png">
+    </a>
 </ion-content>
