--- a/src/app/home/autor/autor.component.html
+++ b/src/app/home/autor/autor.component.html
@@ -1,7 +1,7 @@
 <ion-content fullscreen>
     <ion-card *ngFor="let author of listAuthors" align="center">
       <span (click)="selectItem(author)">
-        <img src="assets/iconos/v2/autores.png">
+          <ion-img [src]="author.imageAuthor"></ion-img>
         <ion-card-header>
           <ion-card-title>{{author.nameAuthor}}</ion-card-title>
         </ion-card-header>
