--- a/src/app/home/quiz/calificacion/calificacion.component.scss
+++ b/src/app/home/quiz/calificacion/calificacion.component.scss
@@ -1,3 +1,7 @@
+ion-content{
+    top: 3%;
+}
+
 ion-card{
     top: 65px;
     background-color: aqua;
@@ -8,10 +12,12 @@ ion-card{
     max-height: auto;
     display: inline-block;
 }
+
 img{
     width: 600px;
     height: 300px;
 }
+
 h3{
     text-align: left;
     size: 10%;
