Cambios en diseño del app
Se arregla el diseño del componente.

--- a/src/app/home/biografia/biografia.component.html
+++ b/src/app/home/biografia/biografia.component.html
@@ -3,7 +3,5 @@
   <br><br><br>
   <h1>{{biografia.author.nameAuthor}}</h1>
   <br><br>
-    <p>
-      {{biografia.author.biography}}
-    </p>
+      <div [innerHtml]="biografia.author.biography"></div>
 </ion-content>
