--- a/src/app/home/capitulos/capitulos.component.scss
+++ b/src/app/home/capitulos/capitulos.component.scss
@@ -31,7 +31,7 @@ ion-card{
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 2%;
-    max-width: auto;
+    max-width: 300px;
     max-height: auto;
     display: inline-flex;
 }
