--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -48,7 +48,7 @@
   <a href="orientacion">
     <ion-card>
       <img src="assets/iconos/v2/orio.jpg" />
->     <ion-card-header>
+      <ion-card-header>
         <ion-card-title>Orientación</ion-card-title>
       </ion-card-header>
     </ion-card>
