--- a/src/app/home/libros/libros.component.scss
+++ b/src/app/home/libros/libros.component.scss
@@ -1,8 +1,9 @@
 ion-content{
-    top: 8%;
+    top: 6%;
     margin-top: 6%;
     bottom: 6%;
     text-align: center;
+    --ion-background-color: #ECF3FF;
 }
 
 :host{
