--- a/src/app/home/autor/autor.component.scss
+++ b/src/app/home/autor/autor.component.scss
@@ -8,6 +8,13 @@ ion-content{
     --ion-background-color: #ECF3FF;
 }
 
+ion-card-title{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: #ECF3FF;
+}
+
 ion-card-header{
     background-color: #585FA6;
 }
