--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.scss
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.scss
@@ -1,3 +1,26 @@
+ion-content{
+  margin-top: 6%;
+  top: 6%;
+  text-align: center;
+}
+
+#carta{
+  min-width: 100%;
+  background-color: #5d9cfa;
+}
+
+:host{
+  --ion-background-color: #ECF3FF;
+}
+
+ion-card{
+  border-radius: 6%;
+  margin: 2%;
+  display: inline-flex;
+  min-width: 300px;
+  max-width: 300px;
+  max-height: auto;
+}
 
 /* DOES NOT WORK - not specific enough */
 
