--- a/src/app/home/quiz/quiz.component.scss
+++ b/src/app/home/quiz/quiz.component.scss
@@ -1,33 +1,35 @@
-ion-app{
-  background-color:rgb(65, 236, 65);
-}
-
-div{
-  background-color: rgb(115, 213, 238);
-}
-
 ion-content{
-  background-color: red;
+  margin-top: 6%;
+  top: 6%;
+  text-align: center;
+}
+
+:host{
+  --ion-background-color: #ECF3FF;
 }
 
 ion-card{
-    top: 65px;
-    background-color: #3880ff;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 2%;
-    max-width: 500px;
-    max-height: auto;
-    display: inline-block;
+  cursor: pointer;
+  background-color: #84A2CF;
+  margin: 3%;
+  max-width: 300px;
+  max-height: 600px;
+  border-radius: 5%;
+  display: inline-flex;
 }
+
+ion-card-header{
+  background-color: #3F70BA;
+}
+
+ion-card-title{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: #ECF3FF;
+}
+
 img{
-    width: 600px;
-    height: 300px;
-}
-
-
-
-
-body{
-  background-color: rgb(115, 213, 238);
+  width: 300px;
+  height: 300px;
 }
