--- a/src/app/home/view-capitulo/view-capitulo.component.scss
+++ b/src/app/home/view-capitulo/view-capitulo.component.scss
@@ -15,12 +15,12 @@ h1{
     margin-bottom: 5%;
 }
 
-p {
+div {
     background-color: #b6252579;
     font-family: "Constantia", serif;
     font-size: 25px;
     color: rgb(0, 29, 10);
-    margin: 0% 10%;
+    margin: 0% 7%;
     align-items: center;
     align-self: center;
     text-align: justify;
