--- a/src/app/home/quiz/calificacion/calificacion.component.html
+++ b/src/app/home/quiz/calificacion/calificacion.component.html
@@ -1,7 +1,7 @@
 <center>
     <ion-content fullscreen>
       <ion-card >
-          <img src="assets/iconos/v2/libro.jpg" />
+          <img src="assets/iconos/v2/libro.png" />
           <ion-card-header>
             <ion-card-subtitle><h3>Su calificación en el libro:</h3> <h4>{{nameBuk}} </h4>  <h3>es de:</h3></ion-card-subtitle>
             <ion-card-title>
