--- a/src/app/home/orientacion/orientacion.component.scss
+++ b/src/app/home/orientacion/orientacion.component.scss
@@ -20,8 +20,7 @@ p {
     font-size: 20px;
     margin-right: 10%;
 }
-#imagen2
-{
-    width: 100px;
-    height: 100px;
+
+#back{
+    margin-bottom: 45px;
 }
