--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,13 +6,52 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
+
+      <a href="home">
+        <ion-item>
+          <ion-icon name="home"></ion-icon>
+          <ion-item>Inicio</ion-item>
+        </ion-item>
+      </a>
+
       <ion-list>
-        <a href="libros"><ion-item>Libros</ion-item></a>
-        <a href="autores"><ion-item>Autores</ion-item></a>
-        <a href="presentacion"><ion-item>Presentación</ion-item></a>
-        <a href="quiz"><ion-item>Evaluación</ion-item></a>
-        <a href="orientacion"><ion-item>Orientación</ion-item></a>
-        <a href=""><ion-item>Configuración</ion-item></a>
+        <a href="libros">
+          <ion-item>
+            <ion-icon name="layers"></ion-icon>
+            <ion-item>Libros</ion-item>
+          </ion-item>
+        </a>
+
+        <a href="autores">
+          <ion-item>
+            <ion-icon name="person"></ion-icon>
+            <ion-item>Autores</ion-item>
+          </ion-item>
+        </a>
+
+
+        <a href="presentacion">
+          <ion-item>
+            <ion-icon name="megaphone"></ion-icon>
+            <ion-item>Presentación</ion-item>
+          </ion-item>
+        </a>
+
+        <a href="quiz">
+          <ion-item>
+            <ion-icon name="school"></ion-icon>
+            <ion-item>Evaluación</ion-item>
+          </ion-item>
+        </a>
+
+
+        <a href="orientacion">
+          <ion-item>
+            <ion-icon name="thumbs-up"></ion-icon>
+            <ion-item>Orientación</ion-item>
+          </ion-item>
+        </a>
+
       </ion-list>
     </ion-content>
   </ion-menu>
