--- a/src/app/home/biografia/biografia.component.scss
+++ b/src/app/home/biografia/biografia.component.scss
@@ -1,3 +1,13 @@
+ion-content{
+    top: 6%;
+    margin-top: 6%;
+    text-align: center;
+}
+
+:host{
+    --ion-background-color:rgba(115, 212, 147, 0.493);
+}
+
 h1{
     text-align: center;
     font-family: "Constantia", serif;
@@ -15,23 +25,12 @@ align-self: center;
 text-align: justify;
 }
 
-:host{
-    --ion-background-color:rgba(115, 212, 147, 0.493);
-}
-
 img {
     width: 200px;
     height: 250px;
-    margin-top: 3%;
-    
-}   
-
-ion-content{
-    top: 6%;
-    margin-top: 6%;
+    margin-top: 3%; 
 }
-#imagen2
-{
-    width: 100px;
-    height: 100px;
+
+#back{
+    margin-bottom: 45px;
 }
