--- a/src/app/home/capitulos/capitulos.component.html
+++ b/src/app/home/capitulos/capitulos.component.html
@@ -7,7 +7,12 @@
             </ion-card-header>
         </span>
     </ion-card>
-    <a href="libros">
-        <img id="imagen2" src="assets/iconos/v2/atras.png">
-    </a>
+    <br><br><br><br>
+
+    <ion-fab horizontal="start" id="back" vertical="bottom" slot="fixed">
+        <ion-fab-button href="libros" type="button" color="tertiary">
+            <ion-icon name="arrow-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
 </ion-content>
