--- a/src/app/home/presentacion/presentacion.component.html
+++ b/src/app/home/presentacion/presentacion.component.html
@@ -9,7 +9,12 @@
     Esta Biblioteca Electrónica Digital iniciará al joven en el conocimiento de autores, libros, y lo familiarizará con la vida de estos. Ampliará su vocabulario y sobre todo será un magnífico auxiliar para bibliotecarios, maestros y promotores de lectura,
     desbrozará el camino para que el joven llegue al libro, a todos los libros.
     </p>
-    <a href="home">
-        <center><img id="imagen2" src="assets/iconos/v2/atras.png"></center>
-    </a>
+    <br><br><br><br>
+
+    <ion-fab horizontal="start" id="back" vertical="bottom" slot="fixed">
+        <ion-fab-button href="home" type="button" color="tertiary">
+          <ion-icon name="arrow-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
 </ion-content>
