--- a/src/app/home/quiz/calificacion/calificacion.component.html
+++ b/src/app/home/quiz/calificacion/calificacion.component.html
@@ -1,16 +1,20 @@
-<center>
-    <ion-content fullscreen>
-      <ion-card >
-          <img src="assets/iconos/v2/libro.png" />
-          <ion-card-header>
-            <ion-card-subtitle><h3>Su calificación en el libro:</h3> <h4>{{nameBuk}} </h4>  <h3>es de:</h3></ion-card-subtitle>
-            <ion-card-title>
-              <h2>{{conteoHijo}} / 5</h2>
-            </ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <a href="quiz" text-align="center"><ion-button> Menu Principal</ion-button></a>
-          </ion-card-content>
-      </ion-card>
-    </ion-content>
-</center>
+<ion-content fullscreen>
+  
+  <ion-card >
+      <img src="assets/iconos/v2/libro.png" />
+      <ion-card-header>
+        <ion-card-title>
+          <h3>Su calificación en el libro:</h3> 
+          <h4>{{nameBuk}} </h4>  
+          <h3>es de:</h3>
+          <h2>{{conteoHijo}} / 5</h2>
+        </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <a href="home" text-align="center" >
+          <ion-button>Menu Principal</ion-button>
+        </a>
+      </ion-card-content>
+  </ion-card>
+
+</ion-content>
