--- a/src/app/home/view-capitulo/view-capitulo.component.html
+++ b/src/app/home/view-capitulo/view-capitulo.component.html
@@ -1,11 +1,37 @@
 <ion-content fullscreen *ngIf="chapters">
+
         <h1>{{chapters.chapter.titleChapter}}</h1>
         <div [innerHtml]="chapters.chapter.textChapter"></div>
 
         <ion-fab vertical="top" horizontal="end" slot="fixed">
                 <ion-fab-button (click)="Onclick1()" type="button" id="hablar" color="light">
-                        <ion-icon md="caret-forward" ios="chevron-forward-circle-outline"></ion-icon>
+                <ion-icon md="caret-forward" ios="chevron-forward-circle-outline"></ion-icon>
+        </ion-fab-button>
+        </ion-fab>
+
+        <!--BOTONES-->
+<!--
+        <ion-fab horizontal="start" id="back" vertical="bottom" slot="fixed">
+                <ion-fab-button href="home" type="button" color="tertiary">
+                        <ion-icon name="arrow-back"></ion-icon>
                 </ion-fab-button>
         </ion-fab>
 
+                <ion-toolbar horizontal="start" id="back" vertical="bottom" >
+                <ion-buttons slot="start">
+                        <ion-back-button defaultHref="/" name="arrow-back" color="light"></ion-back-button>
+                </ion-buttons>
+        </ion-toolbar>
+-->
+
+        <div id="ne">
+        <ion-fab-button vertical="top" horizontal="end" href="capitulos" type="button" color="tertiary">
+                <ion-icon name="arrow-back"></ion-icon>
+        </ion-fab-button>
+
+        <ion-fab-button href="capitulos" type="button" color="tertiary">
+                <ion-icon name="arrow-forward"></ion-icon>
+        </ion-fab-button></div>
+        <br><br><br><br>
+        
 </ion-content>
