--- a/src/app/home/view-capitulo/view-capitulo.component.scss
+++ b/src/app/home/view-capitulo/view-capitulo.component.scss
@@ -7,6 +7,13 @@ ion-content{
     margin-top: 6%;
 }
 
+#ne{
+    float: right;
+    margin-bottom: 6%;
+    background-color: #ECF3FF;
+    display: flex;
+}
+
 h1{
     margin-top: 50px;
     text-align: center;
@@ -24,4 +31,8 @@ div {
     align-items: center;
     align-self: center;
     text-align: justify;
+}
+
+#back{
+    margin-bottom: 45px;
 }
