--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -1,9 +1,12 @@
 <ion-content fullscreen>
     <ion-card *ngFor="let book of listBooks">
-        <span (click)="selectItem(book)">
-            <img src="assets/iconos/v2/libro.png">
+        <span>
+            <img src="assets/iconos/v2/libro.png" (click)="selectItem(book)">
             <ion-card-header>
                 <ion-card-title>{{book.nameBook}}</ion-card-title>
+                <ion-fab-button (click)="selectItemQuestion(book)" type="button" color="tertiary" size="small">
+                    <ion-icon name="document-text-outline" title="Quiz" size="small"></ion-icon>
+                </ion-fab-button>
             </ion-card-header>
         </span>
     </ion-card>
